2011-12-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* generators/scripts/inscop: Fix a bug in undef of math macros.

2011-10-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

        * driver/pocc/driver-pastops.c: Add function to
	collect_all_full_tiles.

2011-08-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-cloog.c,
	* driver/src/options.h,
	* driver/src/options.c: Add option --print-cloog-file, which dumps
	on stderr the CLooG input file.

2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/options.h,
	* driver/src/options.c: Support --vectorizer option in stable mode.

2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/options.c: Fix incorrect strcat use.

2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/Makefile.am: Add missing explicit link to pocc-utils.

2011-07-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-ptile.c,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add support for option --ptile-fts, to
	activate full-tile separation in PTile.

2011-07-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update, fix
	potential infinite loop in compute_regressions.

2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to pocc 1.0.
